[gd_scene load_steps=17 format=2]

[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SE/pick up.wav" type="AudioStream" id=2]
[ext_resource path="res://UI/single_controller.gd" type="Script" id=3]
[ext_resource path="res://scripts/moving_button.gd" type="Script" id=4]
[ext_resource path="res://UI/scaling_button.gd" type="Script" id=5]
[ext_resource path="res://SE/out.wav" type="AudioStream" id=6]
[ext_resource path="res://SE/win.wav" type="AudioStream" id=7]
[ext_resource path="res://SE/pause.wav" type="AudioStream" id=8]
[ext_resource path="res://SE/jump.wav" type="AudioStream" id=9]
[ext_resource path="res://SE/brick_break.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 1 )

[node name="controller" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="score_board" type="Label" parent="."]
margin_left = 48.0
margin_right = 336.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Score:  0/5"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_board" type="Label" parent="."]
margin_left = 768.0
margin_right = 1024.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Time: 0s"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="win_info" type="Label" parent="."]
visible = false
margin_top = 256.0
margin_right = 1024.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 2 )
text = "Congratulations!
You Win"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons_after_win" type="Spatial" parent="."]

[node name="back_button" type="Button" parent="buttons_after_win"]
margin_left = -192.0
margin_top = 512.0
margin_right = -32.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 3 )
text = "< back"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
start = -192
end = 48
time = 0.4

[node name="Timer" type="Timer" parent="buttons_after_win/back_button"]
wait_time = 0.2
one_shot = true

[node name="next_button" type="Button" parent="buttons_after_win"]
margin_left = 1072.0
margin_top = 512.0
margin_right = 1280.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 4 )
text = "Next Stage >"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
start = 1072
end = 768
time = 0.4

[node name="Timer" type="Timer" parent="buttons_after_win/next_button"]
wait_time = 0.2
one_shot = true

[node name="pausing_buttons" type="Spatial" parent="."]

[node name="Back" type="Button" parent="pausing_buttons"]
margin_left = 384.0
margin_top = 368.0
margin_right = 640.0
margin_bottom = 410.0
custom_fonts/font = SubResource( 5 )
text = "Return to Menu"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="pausing_buttons/Back"]
wait_time = 0.1

[node name="Restart" type="Button" parent="pausing_buttons"]
margin_left = 385.507
margin_top = 288.0
margin_right = 641.507
margin_bottom = 330.0
custom_fonts/font = SubResource( 6 )
text = "Restart Game"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="pausing_buttons/Restart"]
wait_time = 0.25

[node name="continue" type="Button" parent="pausing_buttons"]
margin_left = 384.0
margin_top = 208.0
margin_right = 640.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 6 )
text = "Back to Game"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="pausing_buttons/continue"]
wait_time = 0.45

[node name="se" type="AudioStreamPlayer" parent="."]

[node name="pause" type="AudioStreamPlayer" parent="se"]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="out" type="AudioStreamPlayer" parent="se"]
stream = ExtResource( 6 )

[node name="pick" type="AudioStreamPlayer" parent="se"]
stream = ExtResource( 2 )
volume_db = -8.0

[node name="win" type="AudioStreamPlayer" parent="se"]
stream = ExtResource( 7 )

[node name="jump" type="AudioStreamPlayer" parent="se"]
stream = ExtResource( 9 )
volume_db = -8.0

[node name="break" type="AudioStreamPlayer" parent="se"]
stream = ExtResource( 10 )
[connection signal="pressed" from="buttons_after_win/back_button" to="." method="back_to_menu"]
[connection signal="timeout" from="buttons_after_win/back_button/Timer" to="buttons_after_win/back_button" method="_on_Timer_timeout"]
[connection signal="pressed" from="buttons_after_win/next_button" to="." method="_on_next_button_pressed"]
[connection signal="timeout" from="buttons_after_win/next_button/Timer" to="buttons_after_win/next_button" method="_on_Timer_timeout"]
[connection signal="pressed" from="pausing_buttons/Back" to="." method="back_to_menu"]
[connection signal="timeout" from="pausing_buttons/Back/Timer" to="pausing_buttons/Back" method="_on_Timer_timeout"]
[connection signal="pressed" from="pausing_buttons/Restart" to="." method="restart_game"]
[connection signal="pressed" from="pausing_buttons/continue" to="." method="_on_continue_pressed"]
